added style wrote all javascript and jquery

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,12 @@
-html {
-    height: 100%;
-}
+
 body {
-    height: 100%;
+    background-color: #B0D1B0;
+    opacity: .85;
 }
 
+.center-text {
+    text-align: center;
+}
 
 .time-container {
     margin-left: 20%;
@@ -16,7 +18,64 @@ body {
     width:60px;
 }
 
+.button {
+    width: 15px;
+    height: 15px;
+}
+
 .border {
 
     border: 2px solid black;
+}
+
+.header-background{
+    opacity: 0.85;
+    background-color: #fff;
+    background-image:
+            linear-gradient(90deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px),
+            linear-gradient(#eee .1em, transparent .1em);
+    background-size: 100% 1.2em;
+}
+
+/*Responsive code*/
+/* small devices */
+@media (min-width: 0px) {
+    .time-box-responsive {
+        margin-left: 2%;
+        margin-right: 2%;
+    }
+  .button {
+      height: 5%;
+      width: 5%;
+  }
+}
+
+@media (min-width: 576px) {
+    .time-box-responsive {
+        margin-left: 2%;
+        margin-right: 2%;
+
+    }
+}
+
+/*Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) {
+    .time-box-responsive {
+        margin-left: 2%;
+        margin-right: 2%;
+
+    }
+}
+
+/*Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) {
+    .time-box-responsive {
+        margin-left: 20%;
+        margin-right: 20%;
+    }
+}
+
+/*Extra large devices (large desktops, 1200px and up)*/
+@media (min-width: 1200px) {
+
 }
